k8s/modulo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  containers:
  - name: goserver
    image: cauanb/hello-go
    ports:
      - containerPort: 80
